package(
    default_visibility = [
        "@//:android_cuttlefish",
    ],
)

genrule(
    name = "cbor_cmake",
    srcs = glob(
        ["**"],
    ),
    outs = [
        "libcbor.a",
        "cbor.h",
        "cbor/arrays.h",
        "cbor/bytestrings.h",
        "cbor/callbacks.h",
        "cbor/cbor_export.h",
        "cbor/common.h",
        "cbor/configuration.h",
        "cbor/data.h",
        "cbor/encoding.h",
        "cbor/floats_ctrls.h",
        "cbor/ints.h",
        "cbor/maps.h",
        "cbor/serialization.h",
        "cbor/streaming.h",
        "cbor/strings.h",
        "cbor/tags.h",
    ],
    cmd = " && ".join([
        "INITIAL_WD=`pwd`",
        "cd `dirname $(location CMakeLists.txt)`",
        # Interprocedural optimizations mangles the names in the resulting .a file so it's disabled
        "cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INTERPROCEDURAL_OPTIMIZATION=OFF -DCMAKE_POLICY_VERSION_MINIMUM=3.5 .",
        "cmake --build .",
        # Export the .a and .h files for cbor rule, below.
        "cp -R src/* $$INITIAL_WD/$(RULEDIR)",
        "mv cbor/configuration.h $$INITIAL_WD/$(RULEDIR)/cbor",
    ]),
    visibility = ["//visibility:private"],
)

cc_import(
    name = "cbor",
    hdrs = [
        "cbor.h",
        "cbor/arrays.h",
        "cbor/bytestrings.h",
        "cbor/callbacks.h",
        "cbor/cbor_export.h",
        "cbor/common.h",
        "cbor/configuration.h",
        "cbor/data.h",
        "cbor/encoding.h",
        "cbor/floats_ctrls.h",
        "cbor/ints.h",
        "cbor/maps.h",
        "cbor/serialization.h",
        "cbor/streaming.h",
        "cbor/strings.h",
        "cbor/tags.h",
    ],
    static_library = "libcbor.a",
)
