load("@//:build_variables.bzl", "COPTS")

package(
    default_visibility = [
        "@//:android_cuttlefish",
    ],
)

cc_library(
    name = "libopenscreen",
    srcs = [
        "discovery/dnssd/impl/conversion_layer.cc",
        "discovery/dnssd/impl/dns_data_graph.cc",
        "discovery/dnssd/impl/instance_key.cc",
        "discovery/dnssd/impl/network_interface_config.cc",
        "discovery/dnssd/impl/publisher_impl.cc",
        "discovery/dnssd/impl/querier_impl.cc",
        "discovery/dnssd/impl/service_dispatcher.cc",
        "discovery/dnssd/impl/service_instance.cc",
        "discovery/dnssd/impl/service_key.cc",
        "discovery/dnssd/public/dns_sd_instance.cc",
        "discovery/dnssd/public/dns_sd_instance_endpoint.cc",
        "discovery/dnssd/public/dns_sd_txt_record.cc",
        "discovery/mdns/mdns_probe.cc",
        "discovery/mdns/mdns_probe_manager.cc",
        "discovery/mdns/mdns_publisher.cc",
        "discovery/mdns/mdns_querier.cc",
        "discovery/mdns/mdns_reader.cc",
        "discovery/mdns/mdns_receiver.cc",
        "discovery/mdns/mdns_records.cc",
        "discovery/mdns/mdns_responder.cc",
        "discovery/mdns/mdns_sender.cc",
        "discovery/mdns/mdns_service_impl.cc",
        "discovery/mdns/mdns_trackers.cc",
        "discovery/mdns/mdns_writer.cc",
        "discovery/mdns/public/mdns_service.cc",
        "platform/api/udp_socket.cc",
        "platform/base/error.cc",
        "platform/base/interface_info.cc",
        "platform/base/ip_address.cc",
        "platform/base/udp_packet.cc",
        "platform/impl/time.cc",
        "platform/impl/network_interface.cc",
        "platform/impl/network_interface_linux.cc",
        "third_party/abseil/src/absl/base/internal/raw_logging.cc",
        "third_party/abseil/src/absl/base/internal/throw_delegate.cc",
        "third_party/abseil/src/absl/hash/internal/city.cc",
        "third_party/abseil/src/absl/hash/internal/hash.cc",
        "third_party/abseil/src/absl/numeric/int128.cc",
        "third_party/abseil/src/absl/strings/ascii.cc",
        "third_party/abseil/src/absl/strings/charconv.cc",
        "third_party/abseil/src/absl/strings/escaping.cc",
        "third_party/abseil/src/absl/strings/internal/charconv_bigint.cc",
        "third_party/abseil/src/absl/strings/internal/charconv_parse.cc",
        "third_party/abseil/src/absl/strings/internal/escaping.cc",
        "third_party/abseil/src/absl/strings/internal/memutil.cc",
        "third_party/abseil/src/absl/strings/internal/utf8.cc",
        "third_party/abseil/src/absl/strings/match.cc",
        "third_party/abseil/src/absl/strings/numbers.cc",
        "third_party/abseil/src/absl/strings/str_cat.cc",
        "third_party/abseil/src/absl/strings/str_replace.cc",
        "third_party/abseil/src/absl/strings/str_split.cc",
        "third_party/abseil/src/absl/strings/string_view.cc",
        "third_party/abseil/src/absl/strings/substitute.cc",
        "third_party/abseil/src/absl/types/bad_optional_access.cc",
        "third_party/abseil/src/absl/types/bad_variant_access.cc",
        "util/alarm.cc",
        "util/big_endian.cc",
    ],
    includes = [
        ".",
        "third_party/abseil/src",
    ],
    hdrs = [
        "discovery/dnssd/public/dns_sd_instance.h",
        "discovery/dnssd/public/dns_sd_txt_record.h",
        "platform/base/interface_info.h",
        "platform/base/ip_address.h",
        "util/stringprintf.h",
        "util/std_util.h",
    ],
    cxxopts = COPTS + [
        "-fno-exceptions",
        "-Wno-vla-cxx-extension",
    ],
)
