package(
    default_visibility = [
        "//visibility:public",
    ],
)

genrule(
    name = "rnnoise_make",
    srcs = glob(
        ["**"],
    ),
    outs = [
        "librnnoise.a",
        "rnnoise.h",
    ],
    cmd = " && ".join([
        "INITIAL_WD=`pwd`",
        "cd `dirname $(location autogen.sh)`",
        "./autogen.sh",
        "./configure",
        "make",
        # Export the .a and .h files for library rule below.
        "cp -R include/rnnoise.h .libs/librnnoise.a $$INITIAL_WD/$(RULEDIR)",
    ]),
    visibility = ["//visibility:private"],
)

cc_import(
    name = "librnnoise",
    hdrs = [
        "rnnoise.h",
    ],
    static_library = "librnnoise.a",
)
